// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users endpoint users endpoint | GET /users when authenticated 1`] = `
Array [
  Object {
    "activities": Array [],
    "id": "all-permissions-and-state",
    "roles": Array [],
    "state": Object {},
  },
  Object {
    "activities": Array [],
    "id": "all-permissions-no-state",
    "roles": Array [],
    "state": Object {},
  },
  Object {
    "activities": Array [],
    "id": "no-permissions",
    "roles": Array [],
    "state": Object {},
  },
]
`;

exports[`users endpoint users endpoint | GET /users/:userID when authenticated when requesting a non-existant user ID 1`] = `""`;

exports[`users endpoint users endpoint | GET /users/:userID when authenticated when requesting a valid user ID 1`] = `
Object {
  "activities": Array [],
  "id": "2000",
  "name": "All Permissions And State",
  "roles": Array [],
  "state": Object {},
}
`;
